@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-28T16:16:42Z",
-  "count" : 3,
+  "timestamp" : "2023-10-12T08:16:29Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
