@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-12T00:55:23Z",
+  "timestamp" : "2023-10-12T08:16:29Z",
   "count_outdated" : 3037,
   "uniques_outdated" : 1231,
-  "count" : 3107,
-  "uniques" : 1283,
+  "count" : 3108,
+  "uniques" : 1284,
   "clones" : [
     {
       "timestamp": "2023-09-28T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
