@@ -1,3 +1,12 @@
+2023-10-12T08:16:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6493072782 # 1980
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
+* notice: last 14d: unq all: 36 70
+* notice: prev accum: outdated-unq outdated-all / unq all: 1231 3037 / 1283 3107
+* notice: next accum: outdated-unq outdated-all / unq all: 1231 3037 / 1284 3108
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-28 2023-10-12]
+
 2023-10-12T00:55:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6489840882 # 1979
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
